--- a/packages/solana/contracts/programs/solana-vault/Cargo.toml
+++ b/packages/solana/contracts/programs/solana-vault/Cargo.toml
@@ -17,8 +17,8 @@ default = []
 
 [dependencies]
 anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
-solana-program = "=1.17.31"
-anchor-spl = "=0.29.0"
-oapp = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", branch = "main" }
-utils = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", branch = "main" }
+solana-program = "1.17.31"
+anchor-spl = "0.29.0"
+oapp = { git = "https://github.com/SpringChiu/LayerZero-v2.git", branch = "main" }
+utils = { git = "https://github.com/SpringChiu/LayerZero-v2.git", branch = "main" }
 hex = "0.4.3"
