--- a/packages/solana/contracts/programs/solana-vault/Cargo.toml
+++ b/packages/solana/contracts/programs/solana-vault/Cargo.toml
@@ -19,6 +19,6 @@ default = []
 anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
 solana-program = "1.17.31"
 anchor-spl = "0.29.0"
-oapp = { git = "https://github.com/SpringChiu/LayerZero-v2.git", branch = "main" }
-utils = { git = "https://github.com/SpringChiu/LayerZero-v2.git", branch = "main" }
+oapp = { git = "https://github.com/SpringChiu/LayerZero-v2.git", tag = "v0.0.1" }
+utils = { git = "https://github.com/SpringChiu/LayerZero-v2.git", tag = "v0.0.1" }
 hex = "0.4.3"
